--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,11 +45,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
   flutter_launcher_icons: "^0.9.2"
 
 flutter_icons:
-  android: "launcher_icon"
+  android: true
   ios: true
   image_path: "images/icon.png"
 
